--- a/web/.env.production
+++ b/web/.env.production
@@ -1,5 +1,8 @@
 NUXT_PUBLIC_SITE_URL=https://qrcode.twhaodai.com
 
+# API服務器URL
+API_SERVER_URL=https://api-qrcode.twhaodai.com
+
 # 存儲服務配置
 # 存儲類型: local(本地存儲), google(Google Cloud Storage) 或 google-drive(Google Drive)
 STORAGE_TYPE=local
