--- a/.dockerignore
+++ b/.dockerignore
@@ -1,33 +1,43 @@
-# Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
-.DS_Store
-dist
-
-# node-waf configuration
-.lock-wscript
-
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-.dockerignore
-Dockerfile
-*docker-compose*
-
-# Logs
-logs
-*.log
-
-# Runtime data
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
-pids
-*.pid
-*.seed
+# 版本控制
 .git
-.hg
-.svn
+.gitignore
+
+# 依賴
+node_modules
+*/node_modules
+web/node_modules
+express-upload-service/node_modules
+
+# 構建輸出
+web/.nuxt
+web/.output
+web/dist
+
+# 日誌
+*.log
+npm-debug.log*
+pnpm-debug.log*
+
+# 環境變數
+.env
+.env.*
+!.env.example
+web/.env
+web/.env.*
+express-upload-service/.env
+express-upload-service/.env.*
+
+# 上傳的檔案和生成的QR碼
+# 不排除這些目錄，但我們會用volume掛載它們
+# express-upload-service/uploads
+# express-upload-service/qrcodes
+
+# 編輯器
+.vscode
+.idea
+*.swp
+*.swo
+
+# 操作系統
+.DS_Store
+Thumbs.db 
