更新docker-compose.yml和Dockerfile，調整目錄結構及依賴安裝流程，新增啟動腳本以簡化啟動過程，並在package.json中增加調試步驟以檢查目錄存在性。

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "install:web": "cd web && pnpm install",
     "install:server": "cd express-upload-service && pnpm install",
     "build": "cd web && pnpm run build",
-    "start": "npm-run-all --parallel start:web start:server",
+    "start": "ls -la && ls -la express-upload-service && npm-run-all --parallel start:web start:server",
     "start:web": "cd web && pnpm run preview",
     "start:server": "cd express-upload-service && pnpm run start"
   },
