--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
       - "4088:4088"  # 前端服務
       - "3000:3000"  # 後端服務
     volumes:
-      - ./express-upload-service/uploads:/app/express-upload-service/uploads
-      - ./express-upload-service/qrcodes:/app/express-upload-service/qrcodes
+      - ./express-upload-service:/app/express-upload-service
+      - ./web:/app/web
+      - /app/web/node_modules
+      - /app/express-upload-service/node_modules
     environment:
       - NODE_ENV=production
       - PORT=3000
@@ -23,6 +25,4 @@ services:
 
 networks:
   haodai:
-    driver: bridge
-    external:
-      name: haodai
+    external: true
