--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,28 @@
 version: '3.8'
 
 services:
-  qrcode-app:
+  frontend:
     build:
-      context: .
+      context: ./web
       dockerfile: Dockerfile
       args:
         - NODE_ENV=production
       cache_from:
         - node:18-alpine
-    container_name: qrcode-app
+    container_name: qrcode-frontend
     restart: unless-stopped
     ports:
       - "4088:4088"  # 前端服務
-      - "3000:3000"  # 後端服務
-    volumes:
-      - qrcode_uploads:/app/express-upload-service/uploads
-      - qrcode_qrcodes:/app/express-upload-service/qrcodes
     environment:
       - NODE_ENV=production
-      - PORT=3000
       - NUXT_PUBLIC_SITE_URL=http://localhost:4088
-      - API_SERVER_URL=http://localhost:3000
+      - API_SERVER_URL=http://backend:3000
+    depends_on:
+      - backend
     networks:
       - haodai
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3000/api/ping"]
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:4088"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -33,8 +30,36 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1'
-          memory: 1G
+          cpus: '0.5'
+          memory: 512M
+
+  backend:
+    build:
+      context: ./express-upload-service
+      dockerfile: Dockerfile
+    container_name: qrcode-backend
+    restart: unless-stopped
+    ports:
+      - "3000:3000"  # 後端服務
+    volumes:
+      - qrcode_uploads:/app/uploads
+      - qrcode_qrcodes:/app/qrcodes
+    environment:
+      - NODE_ENV=production
+      - PORT=3000
+    networks:
+      - haodai
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3000/api/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
 
 volumes:
   qrcode_uploads:
