更新Dockerfile，調整依賴安裝流程，將安裝命令從使用鎖定檔案改為常規安裝，以簡化依賴管理。

--- a/express-upload-service/Dockerfile
+++ b/express-upload-service/Dockerfile
@@ -16,7 +16,7 @@ COPY package.json ./
 COPY pnpm-lock.yaml ./
 
 # 安裝依賴
-RUN pnpm install --frozen-lockfile --prod
+RUN pnpm install 
 
 # 創建必要的目錄
 RUN mkdir -p uploads qrcodes && \
