更新docker-compose.yml、Dockerfile及環境變數設定，將API_SERVER_URL更改為https://api-qrcode.twhaodai.com，以確保服務連接至正確的API端點。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       - NODE_ENV=production
       - NUXT_PUBLIC_SITE_URL=http://localhost:4088
-      - API_SERVER_URL=http://backend:3000
+      - API_SERVER_URL=https://api-qrcode.twhaodai.com
     depends_on:
       - backend
     networks:
@@ -47,6 +47,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
+      - SITE_URL=https://api-qrcode.twhaodai.com
     networks:
       - haodai
     healthcheck:
