--- a/web/.env.development
+++ b/web/.env.development
@@ -1,7 +1,8 @@
 NUXT_PUBLIC_SITE_URL=https://qrcode.twhaodai.com
 
 # API服務器URL
-API_SERVER_URL=http://localhost:3000
+# API_SERVER_URL=http://localhost:3000
+API_SERVER_URL=https://api-qrcode.twhaodai.com
 
 # 存儲服務配置
 # 存儲類型: local(本地存儲), google(Google Cloud Storage) 或 google-drive(Google Drive)
